# hackathon-dataset

./: .flake8  .gitignore  .gitmodules  Gemfile  LICENSE  README.md  create_mhd.rb  document_reference.json.erb  fhir_server.yml.dist  isort.cfg  poetry.toml  pyproject.toml  requirements.txt  upload.py  upload.rb  upload.rb.deprecated
BreastDx-01-0003/: ma 7255.txt  mg 4696.txt  mg 5627.txt  mr 8539.txt
Endpoint/: siim-dicomweb-endpoint.json
LIDC-IDRI-0132/: README.md  cr-4723.txt  ct-7346.txt
Medication/: levothyroxine.medication.json
Organization/: organization.example.json  siim.organization.json
Practitioner/: practitioner.example.json  siim_md.practitioner.json
TCGA-17-Z058/: ct-3115.txt  ct-3733.txt  pet-7180.txt
TCGA-50-5072/: nm-9963.txt  petct-6523.txt  petct-9588.txt
TCGA-BA-4077/: LICENSE  ct-8334.txt
contribute/: diagnosticReport-template.txt  generate-fhir-from-dicom.py  imagingStudy-template.txt  patient-template.txt
fhir-data/: Gemfile  upload.rb
scripts/siimhack_dataset_toolbox/: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  default_siim_hackathon_dataset_request.yaml  requirements.txt  setup.cfg  setup.py
scripts/siimhack_dataset_toolbox/siimhack_dataset_toolbox/: __init__.py  cli.py  config_default.py  default_siim_hackathon_dataset_request.yaml  dicom_fhir_bridge.py  dicom_tag_modifier.py  dicom_vr_faker.py  dicom_vrs.py
siim_andy_tcga-50-5072/: ct-7423.txt  nm-9963.txt  petct-6523.txt  petct-9588.txt
siim_bibata-prostate/: DiagnosticReport-RadDiagnosticReport0.json  DiagnosticReport-eCCDiagnosticReport0.json  bibata.md  (+17 more)
(+7588 files in other folders)
