[tool.poetry]
name = "hackathon-dataset"
version = "0.1.0"
description = "SIIM Hack-a-thon dataset upload"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
