[metadata]
name = siim-hackathon-cli
version = 1.0.0
description = SIIM Hackathon dataset CLI to add new data in the dataset.
author = Stephan Hahn
author_email = stephan.hahn.pro@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ImagingInformatics/hackathon-dataset.git

[options]
packages = find:
python_requires = >=3.8, <=3.10

[options.entry_points]
console_scripts =
    siim-hackathon = siimhack_dataset_toolbox.__init__:cli